--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -7,14 +7,13 @@ lint:
   options:
     config-file: tests/yamllint.yml
 platforms:
-  - name: {{ role_name }}
-    image: centos:7
-    ## Remove 'image' above and uncomment the following to run systemd in Docker
-    # image: centos/systemd
+  - name: rhel7
+    image: rhel7
+    ## Uncomment the following to run systemd in Docker
     # privileged: true
     # command: /usr/lib/systemd/systemd --system
     # volumes:
-    #   - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    #  - /sys/fs/cgroup:/sys/fs/cgroup:ro
 provisioner:
   name: ansible
   lint:
@@ -26,6 +25,7 @@ scenario:
   name: docker
 verifier:
   name: testinfra
+  directory: ../shared/tests
   options:
     # Add a -v so you see the individual test names,
     # particularly useful with parameterized tests
