--- a/molecule/kvm/molecule.yml
+++ b/molecule/kvm/molecule.yml
@@ -1,30 +1,38 @@
 dependency:
   name: galaxy
 driver:
-  name: openstack
+  name: vagrant
+  provider:
+    name: libvirt
+    type: libvirt
+    options:
+      memory: 1024
+      cpus: 1
 lint:
   name: yamllint
   options:
     config-file: tests/yamllint.yml
 platforms:
-  - name: test-{{ role_name }}
-    image: rhel-7.4-server-x86_64-updated
-    flavor: m1.medium
+  - name: centos7
+    box: centos/7
 provisioner:
   name: ansible
+  log: true
   lint:
     name: ansible-lint
   playbooks:
     prepare: ../shared/prepare.yml
     converge: ../shared/playbook.yml
 scenario:
-  name: openstack
+  name: kvm
 verifier:
   name: testinfra
+  directory: ../shared/tests
   options:
     # Add a -v so you see the individual test names,
     # particularly useful with parameterized tests
     v: true
+    sudo: true
   lint:
     name: flake8
   # Using the shared directory is useful for sharing tests across scenarios,
